# auth-filter

./: .gitignore  Containerfile  README.md  SECURITY_LOG_SANITIZATION.md  alembic.ini  bug-fixes.md  context.md  design-spec.md  hello.py  pyproject.toml
alembic/: env.py
alembic/versions/: 05c98e3f8e3c_initial_schema_with_protected_columns.py  50cceeeedba3_add_internal_user_url_groups.py  6189e507aa73_add_host_field_to_applications_table.py  c8a33a2d50ab_add_applications_table_and_update_url_.py  d0b6baee2278_initial.py
app/: crud.py  db.py  main.py  models.py  schemas.py  utils.py
app/api/endpoints/: __init__.py  applications.py  associations.py  auth.py  authorize.py  url_groups.py  user_groups.py
app/static/: styles.css
app/templates/: application_detail.html  applications.html  associations.html  authorize.html  base.html  dashboard.html  url_groups.html  user_group_detail.html  user_groups.html
app/templates/partials/: applications_create_form.html  applications_edit_form.html  applications_list.html  associations_create_form.html  associations_list.html  authorize_form.html  authorize_result.html  url_groups_add_url_form.html  url_groups_create_form.html  url_groups_list.html  user_groups_add_user_form.html  user_groups_create_form.html  user_groups_edit_form.html  user_groups_list.html  users_list.html
scripts/: __init__.py  build_and_push_image.py  build_image.py  example_usage.sh  push_image.py  retag_latest.py
tests/: test_api.py  test_applications.py  test_authorize_endpoint.py  test_sanitization.py  test_web_assets.py  test_web_assets_api.py  test_web_assets_integration.py
