[project]
name = "authfilter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "greenlet>=3.2.3",
    "htmx>=0.0.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pymysql>=1.1.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-httpx>=0.35.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
